# triforcetools-webgui

./: README.rst  requirements.txt  setup.cfg
triforce_webgui/: __init__.py  manager.py  webgui.py
triforce_webgui/games/: mslug6.yml
triforce_webgui/systems/: aw.yml  naomi.yml
