[metadata]
name = triforce_webgui
summary = WebGUI for TriforceTools
description-file =
    README.rst
author = Stéphane Albert
author-email = sheeprine@nullplace.com
classifier =
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    triforce_webgui

[global]
setup-hooks =
    pbr.hooks.setup_hook
